[package]
name = "sekoya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.0.2"
reqwest = {version = "0.11.14", features = ["blocking", "json"]}
serde = "1.0.152"
serde_json = "1.0.91"
serde_qs = "0.11.0"
